--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,18 @@ authors = [
   { name="Fansure Grin", email="pwz113436@gmail.com" },
 ]
 description = "A bounding box visualizer"
+license = {file = "LICENSE"}
+keywords = ["bbox", "visualizer", "object-detection"]
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
+]
+dependencies = [
+  "pillow",
+  "numpy"
 ]
 
 [project.urls]
